syntax = "proto3";

option go_package = "./pb";

package pb;

// 验证码服务
service Verifycode {
  // 发送验证码
  rpc SendSmsCode(SendSmsCodeReq) returns (SendSmsCodeResp);
  // 验证验证码
  rpc VerifySmsCode(VerifySmsCodeReq) returns (VerifySmsCodeResp);
}

// 发送验证码请求
message SendSmsCodeReq {
  string mobile = 1;   // 手机号
  int32 scene = 2;     // 场景: 1-注册 2-登录 3-重置密码
}

message SendSmsCodeResp {
  string codeKey = 1;  // 验证码key（用于后续验证）
}

// 验证验证码请求
message VerifySmsCodeReq {
  string mobile = 1;   // 手机号
  string code = 2;     // 验证码
  string codeKey = 3;  // 验证码key
  int32 scene = 4;     // 场景
}

message VerifySmsCodeResp {
  bool success = 1;    // 是否成功
}